Fix dangling observer

UserWindowControllerImpl wasn't properly removing observers it
adds. This matters now that there is a call from WindowTreeClientImpls
destructor.

BUG=612837
TEST=covered by tests
R=jamescook@chromium.org, msw@chromium.org

Review-Url: https://codereview.chromium.org/1988153003
Cr-Commit-Position: refs/heads/master@{#394466}

Former-commit-id: 546c4972a6173202f2b054abd77ecb7324e64672