mash/wm/user_window_controller_impl.h
@@ -37,6 +37,9 @@ class UserWindowControllerImpl : public mojom::UserWindowController,
  private:
   void AssignIdIfNecessary(mus::Window* window);
 
+  // Removes observers from the window and connection.
+  void RemoveObservers(mus::Window* user_container);
+
   // Returns the window with the specified user id.
   mus::Window* GetUserWindowById(uint32_t id);
 
@@ -45,6 +48,7 @@ class UserWindowControllerImpl : public mojom::UserWindowController,
 
   // mus::WindowObserver:
   void OnTreeChanging(const TreeChangeParams& params) override;
+  void OnWindowDestroying(mus::Window* window) override;
 
   // mus::WindowTreeConnectionObserver:
   void OnWindowTreeFocusChanged(mus::Window* gained_focus,
